test/invalid/41625_ObjectExtendsObject/Object.plume


class Object extends Object is 